--- a/index.html
+++ b/index.html
@@ -583,7 +583,8 @@ img:hover {
     .card {
         min-width: auto;
         max-width: 90%;
-        width: 90%;\n        padding: 30px 20px;
+        width: 90%;
+        padding: 30px 20px;
         border-radius: 25px;
         border-width: 3px;
         overflow-x: hidden;
