--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@ button {
     display: none;
     margin-top: 30px;
     animation: fadeIn 1s ease forwards;
+    overflow: visible;
+    width: 100%;
 }
 
 #popup h2 {
@@ -295,6 +297,11 @@ button {
 
 img {
     width: 300px;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 30px;
     margin-top: 20px;
     box-shadow: 0 20px 50px rgba(255, 23, 68, 0.6);
@@ -588,6 +595,7 @@ img:hover {
         border-radius: 25px;
         border-width: 3px;
         overflow-x: hidden;
+        overflow-y: visible;
     }
 
     .card::before,
@@ -654,6 +662,7 @@ img:hover {
 
     #popup {
         margin-top: 20px;
+        overflow: visible;
     }
 
     #popup h2 {
@@ -675,6 +684,10 @@ img:hover {
     img {
         width: 90%;
         max-width: 280px;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         border-radius: 20px;
         border-width: 4px;
     }
@@ -798,6 +811,7 @@ img:hover {
         width: 95%;
         padding: 25px 15px;
         border-radius: 20px;
+        overflow-y: visible;
     }
 
     .card::before,
@@ -860,6 +874,10 @@ img:hover {
     img {
         width: 95%;
         max-width: 250px;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     #nameDisplay {
@@ -947,6 +965,7 @@ img:hover {
 @media screen and (max-width: 360px) {
     .card {
         padding: 20px 12px;
+        overflow-y: visible;
     }
 
     h1 {
@@ -1077,7 +1096,7 @@ img:hover {
 
     <div id="popup">
         <h2 style="color:white; text-shadow: 3px 3px 15px rgba(255, 23, 68, 0.6), 0 0 20px rgba(255, 105, 180, 0.8); font-size: 32px; margin-bottom: 20px; font-weight: 800; position: relative;">💕 I LOVE YOU SO MUCHHH 💕</h2>
-        <img src="love.jpg" alt="Our Photo">
+        <img src="love.jpg" alt="Our Photo" loading="eager" style="display:block;">
         <div id="nameDisplay">Akshatha 💖 Sanjay</div>
     </div>
 </div>
