--- a/index.html
+++ b/index.html
@@ -626,22 +626,25 @@ img:hover {
     body {
         padding: 10px;
         box-sizing: border-box;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
     }
 
     body::before {
-        font-size: 120px;
+        font-size: 80px;
     }
 
     .card {
-        min-width: auto;
+        min-width: 100%;
         max-width: 100%;
-        width: calc(100% - 20px);
-        padding: 25px 15px;
+        width: auto;
+        padding: 30px 15px;
         border-radius: 25px;
         border-width: 3px;
-        overflow-x: hidden;
-        overflow-y: visible;
-        margin: 10px;
+        overflow: visible;
+        margin: 10px auto;
+        box-sizing: border-box;
     }
 
     .card::before,
@@ -676,22 +679,28 @@ img:hover {
 
     .buttons {
         flex-direction: column;
-        gap: 12px;
-        margin-top: 15px;
+        gap: 15px;
+        margin-top: 20px;
         min-height: auto;
         position: relative;
         width: 100%;
+        justify-content: center;
+        z-index: 100;
     }
 
     button {
-        padding: 14px 30px;
-        font-size: 17px;
-        width: 100%;
-        max-width: 220px;
-        position: relative !important;
-        left: 0 !important;
-        top: 0 !important;
-        margin: 0 auto;
+        padding: 18px 30px;
+        font-size: 18px;
+        width: 85%;
+        max-width: 280px;
+        position: static !important;
+        left: auto !important;
+        top: auto !important;
+        margin: 0 auto !important;
+        display: block;
+        touch-action: manipulation;
+        pointer-events: auto;
+        z-index: 100;
     }
 
     #yesBtn::before,
@@ -714,6 +723,7 @@ img:hover {
         overflow: visible;
         width: 100%;
         box-sizing: border-box;
+        padding: 0 5px;
     }
 
     #popup h2 {
@@ -753,9 +763,11 @@ img:hover {
 
     #secondScreen {
         max-width: 100%;
-        width: calc(100% - 20px);
+        width: 90%;
         padding: 20px 15px;
         box-sizing: border-box;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     #secondScreen h1 {
@@ -784,8 +796,10 @@ img:hover {
 
     #finalScreen {
         padding: 20px 15px;
-        width: calc(100% - 20px);
+        width: 90%;
         box-sizing: border-box;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     #finalScreen h1 {
@@ -811,7 +825,7 @@ img:hover {
 
     #heartPopup .popup-content {
         min-width: auto;
-        width: calc(100% - 30px);
+        width: 90%;
         max-width: 360px;
         padding: 35px 20px;
         border-radius: 25px;
@@ -860,19 +874,24 @@ img:hover {
 
 @media screen and (max-width: 480px) {
     body {
-        padding: 5px;
+        padding: 8px;
+        box-sizing: border-box;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
     }
 
     body::before {
-        font-size: 100px;
+        font-size: 60px;
     }
 
     .card {
-        width: calc(100% - 10px);
-        padding: 20px 12px;
+        width: auto;
+        padding: 25px 12px;
         border-radius: 20px;
-        overflow-y: visible;
-        margin: 5px;
+        overflow: visible;
+        margin: 8px auto;
+        box-sizing: border-box;
     }
 
     .card::before,
@@ -904,9 +923,16 @@ img:hover {
     }
 
     button {
-        padding: 12px 25px;
-        font-size: 16px;
-        max-width: 200px;
+        padding: 16px 25px;
+        font-size: 17px;
+        width: 85%;
+        max-width: 240px;
+        margin: 0 auto !important;
+        display: block;
+        position: static !important;
+        touch-action: manipulation;
+        pointer-events: auto;
+        z-index: 100;
     }
 
     #yesBtn::before,
@@ -940,17 +966,20 @@ img:hover {
 
     #secondScreen h1 {
         font-size: 26px;
-        padding: 0 25px;
+        padding: 0 15px;
     }
 
     #secondScreen > div:first-child {
         font-size: 28px !important;
+        margin-bottom: 12px !important;
     }
 
     #foreverBtn {
         padding: 13px 30px;
         font-size: 17px;
-        max-width: 200px;
+        border-width: 3px;
+        max-width: 220px;
+        width: auto;
     }
 
     #foreverBtn::before {
@@ -977,9 +1006,10 @@ img:hover {
     }
 
     #heartPopup .popup-content {
-        width: calc(100% - 20px);
-        padding: 28px 15px;
+        width: 90%;
+        padding: 25px 15px;
         border-radius: 20px;
+        box-sizing: border-box;
     }
 
     #heartPopup .popup-content::before {
@@ -1005,21 +1035,33 @@ img:hover {
     }
 
     #heartPopup button {
-        padding: 11px 25px !important;
+        padding: 12px 25px !important;
         font-size: 15px !important;
+        width: auto;
+        max-width: 85%;
+        position: relative !important;
+        left: auto !important;
+        top: auto !important;
+        margin: 15px auto !important;
+        pointer-events: auto;
+        z-index: 1001;
     }
 }
 
 @media screen and (max-width: 360px) {
     body {
-        padding: 3px;
+        padding: 5px;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
     }
 
     .card {
-        padding: 18px 10px;
-        overflow-y: visible;
-        width: calc(100% - 6px);
-        margin: 3px;
+        padding: 20px 10px;
+        overflow: visible;
+        width: auto;
+        margin: 5px auto;
+        box-sizing: border-box;
     }
 
     h1 {
@@ -1038,9 +1080,16 @@ img:hover {
     }
 
     button {
-        padding: 10px 22px;
+        padding: 14px 20px;
         font-size: 15px;
-        max-width: 180px;
+        width: 85%;
+        max-width: 200px;
+        margin: 0 auto !important;
+        display: block;
+        position: static !important;
+        touch-action: manipulation;
+        pointer-events: auto;
+        z-index: 100;
     }
 
     #popup h2 {
@@ -1055,17 +1104,30 @@ img:hover {
 
     #secondScreen h1 {
         font-size: 22px;
-        padding: 0 20px;
+        padding: 0 15px;
+    }
+
+    #secondScreen > div:first-child {
+        font-size: 26px !important;
+        margin-bottom: 10px !important;
+    }
+
+    #foreverBtn {
+        padding: 12px 28px;
+        font-size: 16px;
+        border-width: 3px;
+        max-width: 200px;
+        width: auto;
     }
 
     #finalScreen h1 {
         font-size: 24px;
-        padding: 0 5px;
+        padding: 0 8px;
     }
 
     #finalScreen h2 {
         font-size: 18px;
-        padding: 0 5px;
+        padding: 0 8px;
     }
 
     #heartPopup h2 {
