--- a/index.html
+++ b/index.html
@@ -441,6 +441,16 @@ img:hover {
     animation: spin 3s linear infinite;
 }
 
+.secondScreen-emoji {
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+
+.finalScreen-emoji {
+    font-size: 60px;
+    margin-top: 30px;
+}
+
 @keyframes spin {
     0%, 100% { transform: rotate(0deg); }
     50% { transform: rotate(360deg); }
@@ -795,6 +805,11 @@ img:hover {
         padding: 0 10px;
     }
 
+    .secondScreen-emoji {
+        font-size: 38px !important;
+        margin-bottom: 20px !important;
+    }
+
     #secondScreen > div:first-child {
         font-size: 35px !important;
         margin-bottom: 15px !important;
@@ -831,6 +846,16 @@ img:hover {
     #finalScreen h1::before {
         font-size: 30px;
         margin-bottom: 12px;
+    }
+
+    #finalScreen h2 {
+        font-size: 24px;
+        padding: 0 10px;
+    }
+
+    .finalScreen-emoji {
+        font-size: 45px !important;
+        margin-top: 15px !important;
     }
 
     #finalScreen h2 {
@@ -1025,6 +1050,11 @@ img:hover {
         padding: 0 8px;
     }
 
+    .finalScreen-emoji {
+        font-size: 40px !important;
+        margin-top: 20px !important;
+    }
+
     #finalScreen > div:last-child {
         font-size: 40px !important;
         margin-top: 20px !important;
@@ -1133,6 +1163,11 @@ img:hover {
         padding: 0 12px;
     }
 
+    .secondScreen-emoji {
+        font-size: 26px !important;
+        margin-bottom: 12px !important;
+    }
+
     #secondScreen > div:first-child {
         font-size: 24px !important;
         margin-bottom: 12px !important;
@@ -1159,6 +1194,11 @@ img:hover {
     #finalScreen h2 {
         font-size: 20px;
         padding: 0 8px;
+    }
+
+    .finalScreen-emoji {
+        font-size: 32px !important;
+        margin-top: 15px !important;
     }
 
     #finalScreen > div:last-child {
@@ -1260,6 +1300,11 @@ img:hover {
         margin-bottom: 15px;
     }
 
+    .secondScreen-emoji {
+        font-size: 28px !important;
+        margin-bottom: 10px !important;
+    }
+
     #secondScreen > div:first-child {
         font-size: 30px !important;
         margin-bottom: 10px !important;
@@ -1290,6 +1335,11 @@ img:hover {
 
     #finalScreen h2 {
         font-size: 22px;
+    }
+
+    .finalScreen-emoji {
+        font-size: 38px !important;
+        margin-top: 12px !important;
     }
 
     #heartPopup .popup-content {
@@ -1355,7 +1405,7 @@ img:hover {
 
 <!-- 💍 Second Screen -->
 <div id="secondScreen">
-    <div style="font-size: 50px; margin-bottom: 20px; animation: heartbeatSide 1.5s ease infinite;">💍✨💕✨💍</div>
+    <div class="secondScreen-emoji" style="animation: heartbeatSide 1.5s ease infinite;">💍✨💕✨💍</div>
     <h1>Will You Be Mine Forever? 💍</h1>
     <button id="foreverBtn" onclick="finalLove()">Always ❤️</button>
 </div>
@@ -1364,7 +1414,7 @@ img:hover {
 <div id="finalScreen">
     <h1>Forever & Always 💖</h1>
     <h2>Akshatha 💕💖💕 Sanjay</h2>
-    <div style="font-size: 60px; margin-top: 30px; animation: heartbeatSide 1.2s ease infinite;">❤️💑❤️</div>
+    <div class="finalScreen-emoji" style="animation: heartbeatSide 1.2s ease infinite;">❤️💑❤️</div>
 </div>
 
 <audio id="loveSong" loop>
